tests/js_error/regexp/source_location_non_unicode_start.exp
SyntaxError: Invalid quantifier bounds in regular expression
  ┌ tests/js_error/regexp/source_location_non_unicode_start.js:1:3
  |
1 | /a{2,1}/;
  |   ^